.... Looking for bug, please ignore this. . (picnuz)